Implemented Download File functionality. Might still be bit broken.
